[gd_scene load_steps=7 format=3 uid="uid://d2fcgivmu5oai"]

[ext_resource type="Theme" uid="uid://dkvujhxwpd066" path="res://data/themes/default_theme.tres" id="1_hiwmq"]
[ext_resource type="Script" path="res://data/scenes/UI/party_member_1.gd" id="1_tqqbq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mcpql"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uxyju"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vosxx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1cdpb"]

[node name="PartyMember1" type="PanelContainer"]
custom_minimum_size = Vector2(0, 72)
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.2
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("1_hiwmq")
script = ExtResource("1_tqqbq")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0

[node name="TextureSprite" type="TextureRect" parent="MarginContainer/HBoxContainer/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="BasicInfoText" type="RichTextLabel" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 0
bbcode_enabled = true
text = "NAME
LEVEL: ??
EXP: ??
NEXT LEVEL: ??"
fit_content = true

[node name="Equipment" type="RichTextLabel" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 0
bbcode_enabled = true
text = "EQUIPMENT"
fit_content = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HealthLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
bbcode_enabled = true
text = "Health: ???/???"
fit_content = true

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
show_percentage = false

[node name="StatsButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_mcpql")
theme_override_styles/hover = SubResource("StyleBoxEmpty_uxyju")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vosxx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1cdpb")
action_mode = 0
